fix: navbar lightmode icon spacing

--- a/src/index.css
+++ b/src/index.css
@@ -232,6 +232,6 @@ a:hover {
 .course-degree .iconify {
   margin-right: 0.25rem;
 }
-iconify-icon {
+.course-degree iconify-icon {
   margin-right: 7px;
 }
